fix challenges section on mobile view

--- a/_sass/_challenges.scss
+++ b/_sass/_challenges.scss
@@ -10,8 +10,4 @@
       margin-bottom: .5em;
     }
   }
-
-  .media-left {
-    vertical-align: middle;
-  }
 }
